# anchor-build-hangs

./: Anchor.toml
programs/build-hangs/: Cargo.toml
programs/build-hangs/src/: freeze.rs  lib.rs
programs/build-hangs/src/freeze/: freeze.rs
tests/: build-hangs.ts
